Fixed regression where all whitespace is removed from code.

--- a/app/scss/partials/_layout.scss
+++ b/app/scss/partials/_layout.scss
@@ -136,6 +136,6 @@ section, footer {
   }
 }
 
-.pln {
+.L0 span.pln {
   display: none;
 }
